# Data-Structures

Listy/: CMakeLists.txt
Listy/Dane/: 100.txt  1000.txt  1024.txt  12288.txt  131072.txt  16384.txt  2000.txt  2048.txt  24576.txt  300.txt  3000.txt  32768.txt  4000.txt  4096.txt  65536.txt  find_1000_100.txt  find_100_10.txt  find_100_100.txt  find_1024_102.txt  find_12288_1228.txt  find_16384_1638.txt  find_2000_200.txt  find_2048_204.txt  find_24576_2457.txt  find_32768_3276.txt  find_4096_409.txt  find_65536_6553.txt  find_8192_819.txt  rev_100.txt  rev_1000.txt  rev_1024.txt  rev_12288.txt  rev_16384.txt  rev_2000.txt  rev_2048.txt  rev_24576.txt  rev_300.txt  rev_3000.txt  rev_4000.txt  rev_4096.txt  (+2 more)
Listy/Dane/testy/: Dynamic_array_insert.csv  Dynamic_array_insert_front.csv  Dynamic_array_remove.csv  List_h_find.csv  List_h_insert_back.csv  List_h_insert_front.csv  List_h_remove.csv  List_h_remove_front.csv  List_h_t_find.csv
Listy/Dane_seria1/: 1024.txt  24576.txt  32768.txt  8192.txt  find_12288_1228.txt  find_2048_204.txt  rev_131072.txt  rev_32768.txt
Listy/Dane_seria1/testy/: .~lock.List_h_remove.csv#  DLL_find.csv  DLL_insert.csv  DLL_insert_back.csv  DLL_insert_front.csv  DLL_remove.csv  DLL_remove_back.csv  DLL_remove_front.csv  Dynamic_array_find.csv  Dynamic_array_insert.csv  Dynamic_array_insert_back.csv  Dynamic_array_insert_front.csv  Dynamic_array_remove.csv  Dynamic_array_remove_back.csv  Dynamic_array_remove_front.csv  List_h_insert.csv  List_h_remove.csv  List_h_remove_back.csv  List_h_t_find.csv  List_h_t_insert.csv  List_h_t_insert_back.csv  List_h_t_insert_front.csv  List_h_t_remove.csv  List_h_t_remove_back.csv  List_h_t_remove_front.csv
Listy/Dane_seria2/: 12288.txt  16384.txt  4096.txt  8192.txt  find_1024_102.txt  find_24576_2457.txt  find_4096_409.txt  rev_32768.txt
Listy/Dane_seria2/testy/: DLL_find.csv  DLL_insert.csv  DLL_insert_back.csv  DLL_insert_front.csv  DLL_remove.csv  DLL_remove_back.csv  DLL_remove_front.csv  Dynamic_array_find.csv  Dynamic_array_insert.csv  Dynamic_array_insert_back.csv  Dynamic_array_insert_front.csv  Dynamic_array_remove_back.csv  Dynamic_array_remove_front.csv  List_h_insert.csv  List_h_insert_back.csv  List_h_insert_front.csv  List_h_remove.csv  List_h_remove_back.csv  List_h_remove_front.csv  List_h_t_find.csv  List_h_t_insert.csv  List_h_t_remove.csv  (+4 more)
Listy/include/: Double Linked List.h  DoubleLinkedList.h  Dynamic array.h  Head.h  IDataStructure.h  List(head).h  List(head, tail).h  Node.h  Tail.h  read_write.h  test.h
Listy/src/: DoubleLinkedList.cpp  Dynamic_array.cpp  Head.cpp  List(head).cpp  List(head, tail).cpp  Node.cpp  Node_extended.cpp  Tail.cpp  main.cpp  read_write.cpp  test.cpp
Struktury Danych/Listy/: CMakeLists.txt
(+45 files in other folders)
